️✅️ [5-8] 상품 생성 기능 테스트